@@ -1,0 +1,139 @@
+%YAML 1.1
+%TAG !u! tag:unity3d.com,2011:
+--- !u!43 &4300000
+Mesh:
+  m_ObjectHideFlags: 0
+  m_PrefabParentObject: {fileID: 0}
+  m_PrefabInternal: {fileID: 0}
+  m_Name: roundbox
+  serializedVersion: 8
+  m_SubMeshes:
+  - serializedVersion: 2
+    firstByte: 0
+    indexCount: 72
+    topology: 2
+    firstVertex: 0
+    vertexCount: 24
+    localAABB:
+      m_Center: {x: 0, y: 0, z: 0}
+      m_Extent: {x: 1.1, y: 1.1, z: 1.1}
+  - serializedVersion: 2
+    firstByte: 144
+    indexCount: 24
+    topology: 0
+    firstVertex: 0
+    vertexCount: 24
+    localAABB:
+      m_Center: {x: 0, y: 0, z: 0}
+      m_Extent: {x: 1.1, y: 1.1, z: 1.1}
+  m_Shapes:
+    vertices: []
+    shapes: []
+    channels: []
+    fullWeights: []
+  m_BindPose: []
+  m_BoneNameHashes: 
+  m_RootBoneNameHash: 0
+  m_MeshCompression: 0
+  m_IsReadable: 1
+  m_KeepVertices: 1
+  m_KeepIndices: 1
+  m_IndexBuffer: 00000200030001000400050007000600080009000b000a000d000c000e000f0010001100130012001400160017001500050015001700070007000f000e000600060013001100040004000a000b0005001000120002000000090008000000010014000100030016000d00030002000c0013000e000c0012000a0011001000080015000b00090014000f00170016000d0006000e001300070017000f0005000b001500040011000a0012000c0002000d0016000300140009000100080010000000
+  m_Skin: []
+  m_VertexData:
+    m_CurrentChannels: 3
+    m_VertexCount: 24
+    m_Channels:
+    - stream: 0
+      offset: 0
+      format: 0
+      dimension: 3
+    - stream: 0
+      offset: 12
+      format: 0
+      dimension: 3
+    - stream: 0
+      offset: 0
+      format: 0
+      dimension: 0
+    - stream: 0
+      offset: 0
+      format: 0
+      dimension: 0
+    - stream: 0
+      offset: 0
+      format: 0
+      dimension: 0
+    - stream: 0
+      offset: 0
+      format: 0
+      dimension: 0
+    - stream: 0
+      offset: 0
+      format: 0
+      dimension: 0
+    - stream: 0
+      offset: 0
+      format: 0
+      dimension: 0
+    m_DataSize: 576
+    _typelessdata: 000080bfcdcc8cbf000080bf00000000000080bf0000c034000080bfcdcc8cbf0000803f00000000000080bf0000c0340000803fcdcc8cbf000080bf00000000000080bf0000c0340000803fcdcc8cbf0000803f00000000000080bf0000c034000080bfcdcc8c3f000080bf000000000000803f0000c034000080bfcdcc8c3f0000803f000000000000803f0000c0340000803fcdcc8c3f000080bf000000000000803f0000c0340000803fcdcc8c3f0000803f000000000000803f0000c034cdcc8cbf000080bf000080bf000080bf000000000000c034cdcc8cbf000080bf0000803f000080bf000000000000c034cdcc8cbf0000803f000080bf000080bf000000000000c034cdcc8cbf0000803f0000803f000080bf000000000000c034cdcc8c3f000080bf000080bf0000803f000000000000c034cdcc8c3f000080bf0000803f0000803f000000000000c034cdcc8c3f0000803f000080bf0000803f000000000000c034cdcc8c3f0000803f0000803f0000803f0000000000004035000080bf000080bfcdcc8cbf0000000000000000000080bf000080bf0000803fcdcc8cbf0000000000000000000080bf0000803f000080bfcdcc8cbf0000000000000000000080bf0000803f0000803fcdcc8cbf0000000000000000000080bf000080bf000080bfcdcc8c3f00000000000000000000803f000080bf0000803fcdcc8c3f00000000000000000000803f0000803f000080bfcdcc8c3f00000000000000000000803f0000803f0000803fcdcc8c3f00000000000000000000803f
+  m_CompressedMesh:
+    m_Vertices:
+      m_NumItems: 0
+      m_Range: 0
+      m_Start: 0
+      m_Data: 
+      m_BitSize: 0
+    m_UV:
+      m_NumItems: 0
+      m_Range: 0
+      m_Start: 0
+      m_Data: 
+      m_BitSize: 0
+    m_Normals:
+      m_NumItems: 0
+      m_Range: 0
+      m_Start: 0
+      m_Data: 
+      m_BitSize: 0
+    m_Tangents:
+      m_NumItems: 0
+      m_Range: 0
+      m_Start: 0
+      m_Data: 
+      m_BitSize: 0
+    m_Weights:
+      m_NumItems: 0
+      m_Data: 
+      m_BitSize: 0
+    m_NormalSigns:
+      m_NumItems: 0
+      m_Data: 
+      m_BitSize: 0
+    m_TangentSigns:
+      m_NumItems: 0
+      m_Data: 
+      m_BitSize: 0
+    m_FloatColors:
+      m_NumItems: 0
+      m_Range: 0
+      m_Start: 0
+      m_Data: 
+      m_BitSize: 0
+    m_BoneIndices:
+      m_NumItems: 0
+      m_Data: 
+      m_BitSize: 0
+    m_Triangles:
+      m_NumItems: 0
+      m_Data: 
+      m_BitSize: 0
+    m_UVInfo: 0
+  m_LocalAABB:
+    m_Center: {x: 0, y: 0, z: 0}
+    m_Extent: {x: 1.1, y: 1.1, z: 1.1}
+  m_MeshUsageFlags: 0
+  m_BakedConvexCollisionMesh: 
+  m_BakedTriangleCollisionMesh: 
+  m_MeshOptimized: 0
