@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: 18437d3246fc1d741bbd87d053bb9645
+timeCreated: 1502712370
+licenseType: Free
+NativeFormatImporter:
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
