@@ -1,10 +1,15 @@
 
 TODO:
-	shader for mesh preview
-	move mesh builder asset to standalone folder
+	MeshBuilder
+		shader for mesh preview
+		move mesh builder asset to standalone folder
+		load mesh
+
 
 
 2017.8.14	K.L.	<k.l.lambda@gmail.com>
+
+	+	MeshBuilder: loadPointers added.
 
 	+	MeshBuilder: added normal inspector.
 
